// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WakingScreenTemplate UnitTest renders correctly 1`] = `
<Component>
  <Component
    isDesktop={true}
  >
    Time to wake up!
  </Component>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Component
      hours={0}
      minutes={0}
      mode="meridian"
      timeMeridianStyle={
        Object {
          "fontSize": 22,
        }
      }
      timeStyle={
        Object {
          "fontSize": 48,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Component
      onPress={[Function]}
    >
      Wake Up
    </Component>
    <Component>
      Tip: You can use the Aurora’s button to stop the alarm.
    </Component>
  </View>
</Component>
`;

exports[`WakingScreenTemplate UnitTest renders correctly 2`] = `
<Component>
  <Component
    isDesktop={true}
  >
    起きてください!
  </Component>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Component
      hours={0}
      minutes={0}
      mode="meridian"
      timeMeridianStyle={
        Object {
          "fontSize": 22,
        }
      }
      timeStyle={
        Object {
          "fontSize": 48,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Component
      onPress={[Function]}
    >
      起きる
    </Component>
    <Component>
      Tip: アラームを止めるためにAuroraのボタンが使えます。
    </Component>
  </View>
</Component>
`;
